--- a/Week-1/index.html
+++ b/Week-1/index.html
@@ -8,6 +8,7 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="script.js"></script>
+        <div id="demo"></div>
+        <script src="math.js"></script>
     </body>
 </html>
