--- a/Week-1/index.html
+++ b/Week-1/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="style.css" />
 
-        <title>Document</title>
+        <title>Week-1</title>
     </head>
     <body>
         <div id="demo"></div>
-        <script src="math.js"></script>
+        <script src=" "></script>
     </body>
 </html>
